# diffcode-evaluation-harness

./: LICENSE  README.md  main.py  pyproject.toml
execution/: __init__.py  base.py  executor_registry.py  java_executor.py  javascript_executor.py  python_executor.py
execution/safe_subprocess/: __init__.py
generation/: DynamicLengthGeneration.py  SimpleGeneration.py  base.py
metrics/: base.py  passk.py
models/: DiffusionLM.py  StableDiffCoder.py  base.py
tasks/: base.py  santacoder_fim.py
tests/: test_evaluate.py  test_excutor.py  test_executor.py  test_generate.py  test_generation_evaluation.py
utils/: file_utils.py
