[project]
name = "diffcode-evaluation-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers==4.46.2",
    "torch==2.6.0",
    "huggingface-hub>=0.36.2",
    "datasets>=4.5.0",
]

[[tool.uv.index]]
name = "aliyun"
url  = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
